apps/overlays/zion/sonarr/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-traefik-outpost
  namespace: sonarr
spec:
  type: ExternalName
  externalName: auth-traefik-outpost.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 10
      services:
        - name: zion-sonarr
          port: 80
          sticky:
            cookie:
              name: sonarr-stickiness
              secure: true
              httpOnly: true
              sameSite: none
      middlewares:
        - name: zion-sonarr-auth-middleware
        # - name: zion-sonarr-cors-middleware
    - match: Host(`sonarr.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: zion-auth-traefik-outpost
          port: 9000

  tls:
    secretName: sonarr-certificate-secret
